add h1 and restyle in css

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -22,6 +22,9 @@ body{
 
 .header{
     height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    background: cornflowerblue;
 }
 
 
@@ -47,9 +50,20 @@ body{
 
 .nav__logo{
     font-size: 36px;
+    color: #fff;
 }
 
 .nav__link{
     font-size: 20px;
+    color: #fff;
 }
+
+.header__title{
+  display: grid;
+  place-items: center;
+  flex-grow: 1;
+  font-size: clamp(60px, 5vw,100px);
+  color: #fff;
+}
+    
 /* header */
