change bg and title

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -24,7 +24,7 @@ body{
     height: 100dvh;
     display: flex;
     flex-direction: column;
-    background: cornflowerblue;
+    background: purple;
 }
 
 
